# timetabler-engine

./: .gitignore  README.md  pyproject.toml  pytest.ini
data/: curricula.yml  days.yml  modalities.yml  people.yml  phases.yml  pupil_sets.yml  rooms.yml  studies.yaml  studies.yml  subject_types.yml  subjects.yml  teachers.yml  time_slots.yml
tests/: fixtures.py  test_fixtures.py  test_loader.py  test_phase.py  test_phases.py  test_subjects.py  test_timetabler.py
tests/fixtures/: loader.py  students.py
tests/solver/: test_solver.py
tests/views/: test_cli.py
timetabler/: main.py
timetabler/constraints/: constraint_adder.py  desiderata.py  mandatory.py  mantadory.py
timetabler/models/: curricula.py  days.py  loader.py  model.py  phase.py  phases.py  rooms.py  sessions.py  students.py  subject.py  subjects.py  teachers.py  time_slots.py
timetabler/solvers/: solver.py
timetabler/utils/: printer.py
timetabler/views/: cli.py  solution_printer.py
