[tool.poetry]
name = "timetabler-engine"
version = "0.1.0"
description = ""
authors = ["Armand Adroher <aadroher@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
PyYaml = "^5.3.1"
amazing-printer = "^0.1.0"
rope = "^0.17.0"
tabulate = "^0.8.7"
ortools = "^8.1.8487"

[tool.poetry.group.dev.dependencies]
pytest = "^5.2"
ipython = "^7.14.0"
pylint = "^2.5.2"
autopep8 = "^1.5.2"
pytest-watch = "^4.2.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
